--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -29,7 +29,7 @@
   url = "/tutorial/lorem/"
 
 [[main]]
-  name = "Docs"
+  name = "Data"
   url = "/docs/guides/example-guide/"
 # url = "/docs/1.0/prologue/introduction/"
   weight = 10
