editing the public data page

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -58,6 +58,7 @@ copyRight = "Copyright (c) 2020-2024 Hyas"
 
 [permalinks]
   blog = "/blog/:slug/"
+  publicdata = "/publicdata/"
   docs = "/docs/:sections[1:]/:slug/"
 # docs = "/docs/1.0/:sections[1:]/:slug/"
 
