--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -29,8 +29,8 @@
   url = "/tutorial/lorem/"
 
 [[main]]
-  name = "Data"
-  url = "/data/"
+  name = "PublicData"
+  url = "/publicdata/"
 # url = "/docs/1.0/prologue/introduction/"
   weight = 10
 
